--- a/src/main/resources/static/scss/_login.scss
+++ b/src/main/resources/static/scss/_login.scss
@@ -2,13 +2,13 @@
 // Toshi the dog from https://unsplash.com/@charlesdeluvio - what a funny dog...
 
 .bg-login-image {
-  background: url('https://source.unsplash.com/K4mSJ7kc0As/600x800');
+  background: url('https://source.unsplash.com/U9x5mG0pBiQ/600x800');
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url('https://source.unsplash.com/Mv9hjnEUHR4/600x800');
+  background: url('https://source.unsplash.com/DJ7bWa-Gwks/600x800');
   background-position: center;
   background-size: cover;
 }
